--- a/lib/project/removesubprojectdlgbase.ui
+++ b/lib/project/removesubprojectdlgbase.ui
@@ -65,6 +65,12 @@
                     <property name="name">
                         <cstring>noticeLabel</cstring>
                     </property>
+                    <property name="minimumSize">
+                        <size>
+                            <width>200</width>
+                            <height>0</height>
+                        </size>
+                    </property>
                     <property name="text">
                         <string>&lt;b&gt;Note:&lt;/b&gt; You will not be able to undo this operation!</string>
                     </property>
