--- a/parts/closer/closer_dialog.ui
+++ b/parts/closer/closer_dialog.ui
@@ -24,7 +24,7 @@
                 <cstring>groupBox1</cstring>
             </property>
             <property name="title">
-                <string>Checked Files Will be Closed</string>
+                <string>Checked &amp;Files Will be Closed</string>
             </property>
             <vbox>
                 <property name="name">
@@ -48,7 +48,7 @@
                 <cstring>path_check</cstring>
             </property>
             <property name="text">
-                <string>Show full paths</string>
+                <string>Show full &amp;paths</string>
             </property>
         </widget>
         <widget class="QLayoutWidget">
@@ -82,6 +82,9 @@
                     </property>
                     <property name="text">
                         <string>&amp;OK</string>
+                    </property>
+                    <property name="default">
+                        <bool>true</bool>
                     </property>
                     <property name="toolTip" stdset="0">
                         <string></string>
