--- a/parts/cppsupport/configproblemreporter.ui
+++ b/parts/cppsupport/configproblemreporter.ui
@@ -19,7 +19,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
         <widget class="QGroupBox">
             <property name="name">
                 <cstring>groupBox1</cstring>
@@ -47,7 +46,7 @@
                                 <cstring>bgParserCheckbox</cstring>
                             </property>
                             <property name="text">
-                                <string>Enable background parsing</string>
+                                <string>&amp;Enable background parsing</string>
                             </property>
                         </widget>
                         <widget class="QLabel">
@@ -101,7 +100,7 @@
                 <cstring>groupBox3</cstring>
             </property>
             <property name="title">
-                <string>Special Headers</string>
+                <string>Special &amp;Headers</string>
             </property>
             <grid>
                 <property name="name">
@@ -227,11 +226,9 @@
     <tabstop>pushButton6</tabstop>
 </tabstops>
 <includes>
-    <include location="local" impldecl="in implementation">configproblemreporter.ui.h</include>
     <include location="global" impldecl="in implementation">kdialog.h</include>
+    <include location="local" impldecl="in implementation">configproblemreporter.ui.h</include>
 </includes>
-<layoutdefaults spacing="6" margin="11"/>
-<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <slots>
     <slot>init()</slot>
     <slot>destroy()</slot>
@@ -243,6 +240,8 @@
     <slot>moveUpSpecialHeader()</slot>
     <slot>moveDownSpecialHeader()</slot>
 </slots>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>klistview.h</includehint>
 </includehints>
