--- a/parts/cvs/cvsform.ui
+++ b/parts/cvs/cvsform.ui
@@ -35,7 +35,10 @@ for your new project</string>
                 <enum>Plain</enum>
             </property>
             <property name="text">
-                <string>Release tag:</string>
+                <string>Release &amp;tag:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>release_edit</cstring>
             </property>
         </widget>
         <widget class="QLineEdit" row="6" column="1">
@@ -88,7 +91,10 @@ Most of the thime you'll just reuse the project name</string>
                 <cstring>TextLabel3</cstring>
             </property>
             <property name="text">
-                <string>Message:</string>
+                <string>&amp;Message:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>message_edit</cstring>
             </property>
         </widget>
         <widget class="QLabel" row="3" column="0">
@@ -96,7 +102,10 @@ Most of the thime you'll just reuse the project name</string>
                 <cstring>TextLabel2</cstring>
             </property>
             <property name="text">
-                <string>CVS repository:</string>
+                <string>CVS &amp;repository:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>repository_edit</cstring>
             </property>
         </widget>
         <widget class="QLabel" row="4" column="0">
@@ -104,7 +113,10 @@ Most of the thime you'll just reuse the project name</string>
                 <cstring>TextLabel4</cstring>
             </property>
             <property name="text">
-                <string>Vendor tag:</string>
+                <string>&amp;Vendor tag:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>vendor_edit</cstring>
             </property>
         </widget>
         <widget class="QLabel" row="0" column="0">
@@ -118,7 +130,10 @@ Most of the thime you'll just reuse the project name</string>
                 <enum>Plain</enum>
             </property>
             <property name="text">
-                <string>CVS root:</string>
+                <string>CVS r&amp;oot:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>root_edit</cstring>
             </property>
         </widget>
         <widget class="QLineEdit" row="0" column="1">
@@ -138,7 +153,7 @@ e.g. &lt;tt&gt;/home/cvsroot&lt;/tt&gt; or &lt;tt&gt;:pserver:me@localhost:/home
                 <cstring>init_check</cstring>
             </property>
             <property name="text">
-                <string>Init root</string>
+                <string>&amp;Init root</string>
             </property>
             <property name="toolTip" stdset="0">
                 <string>Check if you defined a new CVS Root</string>
@@ -166,7 +181,10 @@ e.g. &lt;tt&gt;/home/cvsroot&lt;/tt&gt; or &lt;tt&gt;:pserver:me@localhost:/home
                 <enum>Plain</enum>
             </property>
             <property name="text">
-                <string>CVS_RSH:</string>
+                <string>CVS_RS&amp;H:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>cvs_rsh</cstring>
             </property>
         </widget>
     </grid>
