--- a/parts/cvs/tagdialogbase.ui
+++ b/parts/cvs/tagdialogbase.ui
@@ -35,7 +35,10 @@
                         <cstring>textLabel1</cstring>
                     </property>
                     <property name="text">
-                        <string>Tag/Branch name:</string>
+                        <string>Tag/Branch &amp;name:</string>
+                    </property>
+                    <property name="buddy" stdset="0">
+                        <cstring>tagBranchEdit</cstring>
                     </property>
                 </widget>
                 <widget class="QLineEdit">
